--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Hello, this is an demo of the jekyll theme simplex.
   Here you can check out all the features of the theme.
   To try this theme, have a look at the Github.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/enc1102PortFolio" # the subpath of your site, e.g. /blog
+url: "https://0x21f.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: jekyll-theme-simplex
